k8s/01_namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    # enable istio injection into the new namespace
    istio-injection: enabled
  name: api
