k8s/03_service.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: api
  name: demo-app-service
  labels:
    app: demo-app
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    app: demo-app
