k8s/04_gateway.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo-app-gateway
  namespace: api
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-app-route
  namespace: api
spec:
  hosts:
  - "*"
  gateways:
  - demo-app-gateway
  http:
  - match:
    - uri:
        prefix: /v1
    route:
    - destination:
        # interpreted as demo-app-service.api.svc.cluster.local
        host: demo-app-service
        subset: v1
  - match:
    - uri:
        prefix: /v2
      headers:
        version:
          exact: v2.1
    route:
    - destination:
        # interpreted as demo-app-service.api.svc.cluster.local
        host: demo-app-service
        subset: v2m1
  - match:
    - uri:
        prefix: /v2
    route:
    - destination:
        # interpreted as demo-app-service.api.svc.cluster.local
        host: demo-app-service
        subset: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
   name: demo-app-rules
   namespace: api
spec:
  host: demo-app-service
  subsets:
  - name: v1
    labels:
       version: v1
  - name: v2
    labels:
      version: v2
  - name: v2m1
    labels:
      version: v2.1
